llevo un dia y medio con el favicon molestando :)

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 		function create() {
 			cursors = this.input.keyboard.createCursorKeys();
 			background = this.add.image(game_w/2,game_h/2,'background');
+
+			alien_img = this.add.image(600, 250,'alien');
+			alien_img.setScale(0.4);
+			bone1_img = this.add.image(100, 650, 'bone');
+			bone1_img = this.add.image(100, 650, 'bone');
+			bone1_img = this.add.image(100, 650, 'bone');
+			player_img = this.add.image(50, game_h/2, 'player');
 		}
 		function update() {
 
