--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@
 		function create() {
 			cursors = this.input.keyboard.createCursorKeys();
 			background = this.add.image(game_w/2,game_h/2,'background');
+			background.texture.setFilter(Phaser.Textures.FilterMode.NEAREST);
 
-			alien_img = this.add.image(600, 250,'alien');
-			alien_img.setScale(0.3);
+			alien1_img = this.add.image(600, 250,'alien');
+			alien1_img.setScale(0.3);
+			alien1_img.texture.setFilter(Phaser.Textures.FilterMode.NEAREST);
 			bone1_img = this.add.image(100,	450, 'bullet');
-			bone1_img.setScale(0.15);
 			bone2_img = this.add.image(100, 350, 'bullet');
-			bone2_img.setScale(0.15);
 			bone3_img = this.add.image(100, 250, 'bullet');
-			bone3_img.setScale(0.15);
 			player_img = this.add.image(70, game_h/2, 'player');
 			player_img.setScale(0.2);
 			
 			bones = [bone1_img, bone2_img, bone3_img];
 			for(let i = 0; i < bones.length; i++) {
+				bones[i].setScale(0.15);
+				bones[i].texture.setFilter(Phaser.Textures.FilterMode.NEAREST)
 				bones[i].setActive(false).setVisible(false);
 			}
 
@@ -99,11 +100,14 @@
 			});
 			//BONE UPDATE
 			for(let i = 0; i < bones.length; i++) {
-			bones[i].x += boneSpeed;
+				bones[i].x += boneSpeed;
+				if(bones[i].x > game_w){
+					 bones[i].setActive(false).setVisible(false);
+				}
 			}
 		}
 		function fire(){ 
-			bones[boneToFire].x = player_img.x;
+			bones[boneToFire].x = player_img.x+50;
 			bones[boneToFire].y = player_img.y;
 
 			bones[boneToFire].setActive(true).setVisible(true);
