--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		let bone1_img, bone2_img, bone3_img;
 		let bones;
 		let speed = 2;
-		let alienSpeed = 3;
+		let alienSpeed = 1.5;
 		let boneSpeed = 5;
 		let boneToFire = 0;
 		let hasShooted = false;
@@ -67,10 +67,10 @@
 			score_txt = this.add.text(game_w-38, 64, score);
 			
 			//Create Aliens
-			alien1_img = this.add.image(800, 250,'alien');
-			alien2_img = this.add.image(810, 300,'alien');
-			alien3_img = this.add.image(800, 350,'alien');
-			alien4_img = this.add.image(820, 400,'alien');
+			alien1_img = this.add.image(900, 150,'alien');
+			alien2_img = this.add.image(960, 350,'alien');
+			alien3_img = this.add.image(910, 470,'alien');
+			alien4_img = this.add.image(990, 530,'alien');
 			aliens = [alien1_img, alien2_img, alien3_img, alien4_img];
 			for(let i = 0; i < aliens.length; i++) {
 				aliens[i].setScale(0.3);
@@ -129,6 +129,11 @@
 					 bones[i].setActive(false).setVisible(false);
 				}
 			}
+			//ALIEN UPDATE
+			for (let i = 0; i < aliens.length; i++) {
+				aliens[i].x -= alienSpeed;
+				if (aliens[i].x < 0){respawn(aliens[i]);}
+			}
 		}
 		function fire(){ 
 			bones[boneToFire].x = player_img.x+50;
@@ -139,7 +144,11 @@
 			console.log("shutinc");
 		}	
 		function reset() {
-
+			
+		}
+		function respawn(alien) {
+			alien.x = Math.floor(Math.random()*600) + game_w;
+			alien.y = Math.floor(Math.random()*600);
 		}
 	</script>
 </body>
